[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono"
]}
chrono = "0.4.42"
dotenvy = "0.15.7"
serde_json = "1.0.147"
axum = "0.8.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4"] }
serenity = "0.12.5"
